// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Filtering URL params > should not be empty if active filters are present 1`] = `
{
  "filterableInStorefront": "true",
  "isVariantOnly": "true",
  "valueRequired": "true",
  "visibleInStorefront": "true",
}
`;

exports[`Filtering URL params > should not be empty if active filters are present 2`] = `"filterableInStorefront=true&isVariantOnly=true&valueRequired=true&visibleInStorefront=true"`;

exports[`Filtering URL params should not be empty if active filters are present 1`] = `
Object {
  "filterableInStorefront": "true",
  "isVariantOnly": "true",
  "valueRequired": "true",
  "visibleInStorefront": "true",
}
`;

exports[`Filtering URL params should not be empty if active filters are present 2`] = `"filterableInStorefront=true&isVariantOnly=true&valueRequired=true&visibleInStorefront=true"`;
